--- a/search/src/main/res/layout/activity_search.xml
+++ b/search/src/main/res/layout/activity_search.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/rootView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -10,75 +11,96 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
+        <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"/>
-
-            <androidx.appcompat.widget.SearchView
-                    android:id="@+id/searchView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:paddingStart="-6dp"
-                    android:paddingLeft="-6dp"
-                    android:paddingEnd="-6dp"
-                    android:paddingRight="-6dp"
-                    app:queryBackground="@android:color/transparent"
-                    app:queryHint="Parceiro, local ou promoção..."
-                    tools:ignore="RtlHardcoded,RtlSymmetry"/>
-
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical">
+            android:scrollbars="vertical"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
-                android:id="@+id/relativeLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="12dp"
+                android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-            <TextView
-                    android:id="@+id/dateDetailsAudioTXT"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_marginBottom="12dp"
-                    android:textSize="14sp"
-                    tools:text="Teste"/>
+            <RelativeLayout
+                    android:id="@+id/searchArea"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-            <TextView
-                    android:id="@+id/headlineDetailsAudioTXT"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_marginBottom="12dp"
-                    tools:text="headlineDetailsAudioTXT"/>
+                <androidx.appcompat.widget.SearchView
+                        android:id="@+id/searchView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:paddingStart="-6dp"
+                        android:paddingLeft="-6dp"
+                        android:paddingEnd="-6dp"
+                        android:paddingRight="-6dp"
+                        app:queryHint="Parceiro, local ou promoção..."
+                        tools:ignore="RtlHardcoded,RtlSymmetry"/>
 
-            <TextView
-                    android:id="@+id/messageDetailsAudioTXT"
-                    android:layout_width="wrap_content"
+            </RelativeLayout>
+
+            <RelativeLayout
+                    android:id="@+id/suggestionArea"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_marginBottom="12dp"
-                    android:lineSpacingExtra="4dp"
-                    tools:text="messageDetailsAudioTXT"
-                    tools:visibility="visible"/>
+                    android:layout_margin="@dimen/fab_margin">
+
+                <TextView
+                        android:id="@+id/suggestionTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="@string/suggestion"
+                        android:textColor="#39434d"
+                        android:textSize="@dimen/title_session"
+                        android:textStyle="bold"
+                        tools:ignore="RtlHardcoded"/>
+
+                <GridLayout
+                        android:id="@+id/gridLayoutSuggestion"
+                        android:layout_below="@id/suggestionTitle"
+                        android:layout_width="match_parent"
+                        android:layout_centerHorizontal="true"
+                        android:layout_height="wrap_content"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                    android:id="@+id/pastSearchArea"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/fab_margin"
+                    android:layout_marginStart="@dimen/fab_margin"
+                    android:layout_marginEnd="@dimen/fab_margin">
+
+                <TextView
+                        android:id="@+id/pastSearchesTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/past_searches"
+                        android:textColor="#39434d"
+                        android:textSize="@dimen/title_session"
+                        android:textStyle="bold"
+                        tools:ignore="RtlHardcoded"/>
+
+                <LinearLayout
+                        android:id="@+id/pastSearchList"
+                        android:layout_below="@id/pastSearchesTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/fab_margin"
+                        android:layout_marginLeft="@dimen/fab_margin"
+                        android:orientation="vertical"/>
+            </RelativeLayout>
 
         </LinearLayout>
 
