--- a/search/src/main/res/values/dimens.xml
+++ b/search/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_view_height">20sp</dimen>
+    <dimen name="title_session">18sp</dimen>
 </resources>
