--- a/search/src/main/res/layout/activity_search.xml
+++ b/search/src/main/res/layout/activity_search.xml
@@ -23,16 +23,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical"
+            android:fillViewport="true"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
-                android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:orientation="vertical">
+        <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <RelativeLayout
-                    android:id="@+id/searchArea"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+            <LinearLayout
+                    android:layout_width="match_parent" android:layout_height="match_parent"
+                    android:orientation="vertical">
 
                 <androidx.appcompat.widget.SearchView
                         android:id="@+id/searchView"
@@ -43,66 +43,80 @@
                         android:paddingLeft="-6dp"
                         android:paddingEnd="-6dp"
                         android:paddingRight="-6dp"
-                        app:queryHint="Parceiro, local ou promoção..."
+                        app:queryHint="Procure os fatos de Chuck..."
                         tools:ignore="RtlHardcoded,RtlSymmetry"/>
 
-            </RelativeLayout>
-
-            <RelativeLayout
-                    android:id="@+id/suggestionArea"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/fab_margin">
-
-                <TextView
-                        android:id="@+id/suggestionTitle"
+                <RelativeLayout
+                        android:id="@+id/suggestionArea"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
-                        android:text="@string/suggestion"
-                        android:textColor="#39434d"
-                        android:textSize="@dimen/title_session"
-                        android:textStyle="bold"
-                        tools:ignore="RtlHardcoded"/>
+                        android:layout_margin="@dimen/fab_margin">
 
-                <GridLayout
-                        android:id="@+id/gridLayoutSuggestion"
-                        android:layout_below="@id/suggestionTitle"
+                    <TextView
+                            android:id="@+id/suggestionTitle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="12dp"
+                            android:text="@string/suggestion"
+                            android:textColor="#39434d"
+                            android:textSize="@dimen/title_session"
+                            android:textStyle="bold"
+                            tools:ignore="RtlHardcoded"/>
+
+                    <GridLayout
+                            android:id="@+id/gridLayoutSuggestion"
+                            android:layout_below="@id/suggestionTitle"
+                            android:layout_width="match_parent"
+                            android:layout_centerHorizontal="true"
+                            android:layout_height="wrap_content"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                        android:id="@+id/pastSearchArea"
                         android:layout_width="match_parent"
-                        android:layout_centerHorizontal="true"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/fab_margin"
+                        android:layout_marginStart="@dimen/fab_margin"
+                        android:layout_marginEnd="@dimen/fab_margin">
+
+                    <TextView
+                            android:id="@+id/pastSearchesTitle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/past_searches"
+                            android:textColor="#39434d"
+                            android:textSize="@dimen/title_session"
+                            android:textStyle="bold"
+                            tools:ignore="RtlHardcoded"/>
+
+                    <LinearLayout
+                            android:id="@+id/pastSearchList"
+                            android:layout_below="@id/pastSearchesTitle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/fab_margin"
+                            android:layout_marginLeft="@dimen/fab_margin"
+                            android:orientation="vertical"/>
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/loadingArea"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:background="#31000000"
+                    android:visibility="gone">
+
+                <ProgressBar
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
-            </RelativeLayout>
+            </LinearLayout>
 
-            <RelativeLayout
-                    android:id="@+id/pastSearchArea"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/fab_margin"
-                    android:layout_marginStart="@dimen/fab_margin"
-                    android:layout_marginEnd="@dimen/fab_margin">
-
-                <TextView
-                        android:id="@+id/pastSearchesTitle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/past_searches"
-                        android:textColor="#39434d"
-                        android:textSize="@dimen/title_session"
-                        android:textStyle="bold"
-                        tools:ignore="RtlHardcoded"/>
-
-                <LinearLayout
-                        android:id="@+id/pastSearchList"
-                        android:layout_below="@id/pastSearchesTitle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/fab_margin"
-                        android:layout_marginLeft="@dimen/fab_margin"
-                        android:orientation="vertical"/>
-            </RelativeLayout>
-
-        </LinearLayout>
+        </FrameLayout>
 
     </androidx.core.widget.NestedScrollView>
 
