--- a/search/src/main/res/layout/item_fact_long.xml
+++ b/search/src/main/res/layout/item_fact_long.xml
@@ -19,12 +19,12 @@
             android:layout_height="wrap_content">
 
         <TextView
-                android:id="@+id/title"
+                android:id="@+id/titleLong"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
-                android:textStyle="bold"
-                android:textSize="20sp"
+                android:textStyle="normal"
+                android:textSize="16sp"
                 tools:text="The Chuck Norris integration existed even before Slack existed"/>
 
         <RelativeLayout
@@ -40,7 +40,7 @@
                      android:layout_centerVertical="true"/>
 
             <ImageView
-                    android:id="@+id/share"
+                    android:id="@+id/shareLong"
                     android:src="@drawable/ic_share_black_24dp"
                     android:layout_width="wrap_content"
                     android:layout_marginStart="12dp"
